--- a/game/assets/.gitignore
+++ b/game/assets/.gitignore
@@ -92,6 +92,7 @@
 /misc/vignette.png
 /misc/shadow.png
 /misc/pumpkinblur.png
+/misc/water.png
 /environment/rain.png
 /environment/snow.png
 /item/boat.png
