--- a/game/assets/.gitignore
+++ b/game/assets/.gitignore
@@ -105,6 +105,12 @@
 /mob/spider_eyes.png
 /mob/squid.png
 /title/mclogo.png
+/gui/inventory.png
+/gui/container.png
+/gui/furnace.png
+/gui/trap.png
+/lang/en_US.lang
+/lang/stats_US.lang
 
 # Ignore the panorama textures. Adding them yourself will make the title screen use them.
 /gui/background/panorama_0.png
