--- a/platforms/windows/projects/World/World.vcxproj.filters
+++ b/platforms/windows/projects/World/World.vcxproj.filters
@@ -596,6 +596,12 @@
     <ClCompile Include="$(MC_ROOT)\source\world\CompoundContainer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\source\world\inventory\ChestMenu.cpp">
+      <Filter>Source Files\Inventory</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\source\world\item\DyeColor.cpp">
+      <Filter>Source Files\Item</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Entity.hpp">
@@ -1050,6 +1056,12 @@
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\world\inventory\SimpleContainer.hpp">
       <Filter>Header Files\Inventory</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\source\world\inventory\ChestMenu.hpp">
+      <Filter>Header Files\Inventory</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\source\world\item\DyeColor.hpp">
+      <Filter>Header Files\Item</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
