--- a/platforms/windows/projects/Client/Client.vcxproj.filters
+++ b/platforms/windows/projects/Client/Client.vcxproj.filters
@@ -587,16 +587,16 @@
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\renderer\Tesselator.hpp">
       <Filter>Header Files\Renderer\Renderer</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\source\client\gui\screens\inventory\InventoryScreen.hpp">
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\inventory\InventoryScreen.hpp">
       <Filter>Header Files\GUI\Screens\Inventory</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\source\client\gui\screens\inventory\ContainerScreen.hpp">
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\inventory\ContainerScreen.hpp">
       <Filter>Header Files\GUI\Screens\Inventory</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\source\client\gui\screens\inventory\ChestScreen.hpp">
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\inventory\ChestScreen.hpp">
       <Filter>Header Files\GUI\Screens\Inventory</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\source\client\locale\Language.hpp">
+    <ClInclude Include="$(MC_ROOT)\source\client\locale\Language.hpp">
       <Filter>Header Files\Locale</Filter>
     </ClInclude>
   </ItemGroup>
@@ -1036,16 +1036,16 @@
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\renderer\Tesselator.cpp">
       <Filter>Source Files\Renderer\Renderer</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\source\client\gui\screens\inventory\ContainerScreen.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\inventory\ContainerScreen.cpp">
       <Filter>Source Files\GUI\Screens\Inventory</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\source\client\gui\screens\inventory\InventoryScreen.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\inventory\InventoryScreen.cpp">
       <Filter>Source Files\GUI\Screens\Inventory</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\source\client\gui\screens\inventory\ChestScreen.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\inventory\ChestScreen.cpp">
       <Filter>Source Files\GUI\Screens\Inventory</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\source\client\locale\Language.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\client\locale\Language.cpp">
       <Filter>Source Files\Locale</Filter>
     </ClCompile>
   </ItemGroup>
