Container controller support & Cleanup

--- a/game/assets/.gitignore
+++ b/game/assets/.gitignore
@@ -108,8 +108,10 @@
 /title/mclogo.png
 /gui/inventory.png
 /gui/container.png
+/gui/crafting.png
 /gui/furnace.png
 /gui/trap.png
+/gui/unknown_pack.png
 /lang/en_US.lang
 /lang/stats_US.lang
 
