--- a/platforms/windows/projects/World/World.vcxproj
+++ b/platforms/windows/projects/World/World.vcxproj
@@ -209,6 +209,8 @@
     <ClCompile Include="$(MC_ROOT)\source\world\inventory\ResultSlot.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\CompoundContainer.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\inventory\SimpleContainer.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\inventory\ChestMenu.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\item\DyeColor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Entity.hpp" />
@@ -362,6 +364,8 @@
     <ClInclude Include="$(MC_ROOT)\source\world\inventory\ResultSlot.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\CompoundContainer.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\inventory\SimpleContainer.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\inventory\ChestMenu.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\item\DyeColor.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NBT\NBT.vcxproj">
