Added options saving support to Xbox 360 * Assigned XDK360 client a Title ID

--- a/platforms/windows/projects/MinecraftClient.XDK360/MinecraftClient.XDK360.vcxproj
+++ b/platforms/windows/projects/MinecraftClient.XDK360/MinecraftClient.XDK360.vcxproj
@@ -45,6 +45,10 @@
     <Deploy>
       <DeploymentFiles>$(RemoteRoot)=$(ImagePath);$(RemoteRoot)\assets=$(MC_ROOT)\game\assets;</DeploymentFiles>
     </Deploy>
+	<ImageXex>
+	  <ConfigurationFile>$(MC_ROOT)\platforms\xdk360\xex.xml</ConfigurationFile>
+	  <AdditionalSections></AdditionalSections>
+	</ImageXex>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\platforms\xdk360\AppPlatform_xdk360.hpp" />
