--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -328,6 +328,7 @@ add_library(reminecraftpe-core STATIC
     world/item/ItemStack.cpp
     world/item/RocketItem.cpp
     world/item/Item.cpp
+    world/item/ToolItem.cpp
     world/item/AuxTileItem.cpp
     world/item/ClothItem.cpp
     world/item/DyeColor.cpp
