--- a/platforms/windows/projects/World/World.vcxproj.filters
+++ b/platforms/windows/projects/World/World.vcxproj.filters
@@ -602,6 +602,9 @@
     <ClCompile Include="$(MC_ROOT)\source\world\item\DyeColor.cpp">
       <Filter>Source Files\Item</Filter>
     </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\world\item\ToolItem.cpp">
+      <Filter>Source Files\Item</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Entity.hpp">
@@ -1061,6 +1064,12 @@
       <Filter>Header Files\Inventory</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\world\item\DyeColor.hpp">
+      <Filter>Header Files\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\world\item\ToolItem.hpp">
+      <Filter>Header Files\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\world\item\Tool.hpp">
       <Filter>Header Files\Item</Filter>
     </ClInclude>
   </ItemGroup>
