--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -77,6 +77,15 @@ jobs:
                 GCC_PREPROCESSOR_DEFINITIONS='$(GCC_PREPROCESSOR_DEFINITIONS)' \
                 -quiet \
                 clean archive
+                cp $RUNNER_TEMP/GitHubActions_MacOS_${{ matrix.backend_name }}.xcarchive/Products/usr/local/bin/MinecraftClient.${{ matrix.backend_name }} reminecraftpe
+                dsymutil reminecraftpe
+          - uses: actions/upload-artifact@v6
+            with:
+              name: macOS
+              path: |
+                build/reminecraftpe
+                build/reminecraftpe.dSYM
+                build/assets
 
     ios:
         name: iOS
