--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -65,7 +65,7 @@ jobs:
           - name: Install Dependencies
             run: |
                 port selfupdate
-                port install ${{ matrix.packages }} +universal +static
+                port install ${{ matrix.packages }} +universal
           - name: Build macOS Archive
             run: |
                 cd platforms/macos/projects/Minecraft
@@ -77,13 +77,13 @@ jobs:
                 GCC_PREPROCESSOR_DEFINITIONS='$(GCC_PREPROCESSOR_DEFINITIONS)' \
                 -quiet \
                 clean archive
-                cp $RUNNER_TEMP/GitHubActions_MacOS_${{ matrix.backend_name }}.xcarchive/Products/usr/local/bin/MinecraftClient.${{ matrix.backend_name }} reminecraftpe
+                mv game/assets $RUNNER_TEMP/GitHubActions_MacOS_${{ matrix.backend_name }}.xcarchive/Products/usr/local/bin/MinecraftClient.${{ matrix.backend_name }} ~
           - uses: actions/upload-artifact@v6
             with:
               name: macOS
               path: |
-                platforms/macos/projects/Minecraft/reminecraftpe
-                game/assets
+                reminecraftpe
+                assets
 
     ios:
         name: iOS
