--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -15,7 +15,7 @@ jobs:
                     packages: 'libsdl2-dev'
                   - name: SDL 2 (32-bit)
                     flags: '-DREMCPE_PLATFORM=sdl2 -DREMCPE_GFX_API=OGL -DCMAKE_C_FLAGS=-m32 -DCMAKE_CXX_FLAGS=-m32'
-                    packages: 'libsdl2-dev'
+                    packages: 'libsdl2-dev gcc-multilib g++-multilib'
         name: Linux (${{ matrix.name }})
         runs-on: ubuntu-24.04
         steps:
