--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -80,7 +80,8 @@ jobs:
                 GCC_PREPROCESSOR_DEFINITIONS='$(GCC_PREPROCESSOR_DEFINITIONS)' \
                 -quiet \
                 clean archive
-                mv ../../../../game/assets $RUNNER_TEMP/GitHubActions_MacOS_${{ matrix.backend_name }}.xcarchive/Products/usr/local/bin/MinecraftClient.${{ matrix.backend_name }} ../../../..
+                mv $RUNNER_TEMP/GitHubActions_MacOS_${{ matrix.backend_name }}.xcarchive/Products/usr/local/bin/MinecraftClient.${{ matrix.backend_name }} ../../../../reminecraftpe
+                mv ../../../../game/assets ../../../..
           - uses: actions/upload-artifact@v6
             with:
               name: macOS
